# myprojet

./: .env  alembic.ini  database.py  main.py  middleware.py  models.py  pyproject.toml
app/: app.py
core/: config.py
crud/: auth.py  taches.py  user.py
schemas/: tache.py  user.py
